--- a/pom.xml
+++ b/pom.xml
@@ -2,11 +2,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<!--<parent>
+	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.1.2</version>
-	</parent>-->
+		<version>2.7.10</version>
+		<relativePath/>
+	</parent>
 	<groupId>com.gtorresoft.poc.grpc.streaming</groupId>
 	<artifactId>ecommerce</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
@@ -27,58 +28,17 @@
 		<os-maven-plugin.version>1.6.2</os-maven-plugin.version>
 		<protobuf-maven-plugin.version>0.6.1</protobuf-maven-plugin.version>
 		<annotation-api.version>1.3.2</annotation-api.version>
-
-		<!-- logging -->
-		<org.slf4j.version>1.7.32</org.slf4j.version>
-		<logback.version>1.2.7</logback.version>
-
-		<!-- neo4j -->
-		<!--<spring-data-neo4j.version>5.0.1.RELEASE</spring-data-neo4j.version>
-		<neo4j-ogm-test.version>3.1.2</neo4j-ogm-test.version>
-		<neo4j-ogm-embedded-driver.version>3.1.2</neo4j-ogm-embedded-driver.version>-->
-
 	</properties>
 
 	<dependencies>
-		<!-- Spring Boot
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
-			<exclusions>
-				<exclusion>
-					<groupId>org.springframework.boot</groupId>
-					<artifactId>spring-boot-starter-logging</artifactId>
-				</exclusion>
-			</exclusions>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>-->
-
-		<!-- logging
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
-			<version>${org.slf4j.version}</version>
+			<artifactId>spring-boot-starter-data-neo4j</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>jcl-over-slf4j</artifactId>
-			<version>${org.slf4j.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>ch.qos.logback</groupId>
-			<artifactId>logback-classic</artifactId>
-			<version>${logback.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>ch.qos.logback</groupId>
-			<artifactId>logback-core</artifactId>
-			<version>${logback.version}</version>
-		</dependency>-->
 
 		<!-- Random -->
 		<dependency>
@@ -88,7 +48,7 @@
 		</dependency>
 
 
-		<!-- grpc -->
+		<!-- grpc
 		<dependency>
 			<groupId>io.grpc</groupId>
 			<artifactId>grpc-netty-shaded</artifactId>
@@ -115,7 +75,7 @@
 			<groupId>javax.annotation</groupId>
 			<artifactId>javax.annotation-api</artifactId>
 			<version>${annotation-api.version}</version>
-		</dependency>
+		</dependency>-->
 
 		<!-- grpc spring boot starter -->
 		<dependency>
