--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<!--<version>3.1.2</version>-->
-		<version>2.7.10</version>
+		<version>2.7.14</version>
 		<relativePath/>
 	</parent>
 
@@ -30,6 +30,15 @@
 		<module>client-ecommerce</module>
 		<module>api-grpc-ecommerce</module>
 	</modules>
+
+	<dependencies>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.28</version>
+			<scope>provided</scope>
+		</dependency>
+	</dependencies>
 
 	<build>
 		<plugins>
